--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "react-webcam": "^7.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
